--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-libdr-stramedia-sms-perl (0.01-1) unstable; urgency=low
+libdr-stramedia-sms-perl (0.01-1) nowtaxi; urgency=low
 
   * Initial Release.
 
